<?xml version="1.0"?>
<package format="3">
  <name>ros2_turtle_gui</name>
  <version>0.0.1</version>
  <description>Interface Qt pour interagir avec le node Turtlesim ROS2.</description>

  <maintainer email="gaetanchevalier28@gmail.com">Gaetan C</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>turtlesim</depend>
  <depend>Qt5</depend> 

  <build_depend>qtbase5-dev</build_depend> 

  <!--<exec_depend>rclcpp</exec_depend>
  <exec_depend>turtlesim</exec_depend>-->

</package>
